--- a/blocks/body/body.css
+++ b/blocks/body/body.css
@@ -3,7 +3,7 @@
     justify-content: center;
     background-color: #000000;
     color: #ffffff;
-    font-family: 'Inter', sans-serif, Arial;
+    font-family: 'Inter', Arial, sans-serif;
     font-style: normal;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
