--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -4,14 +4,11 @@
     width: 100%;
     padding-bottom: 41px;
     box-sizing: border-box;
-    border-bottom: 1px solid #545454;
+    border-bottom: 1px solid rgba(84, 84, 84, 0.7);
   }
   
   @media screen and (max-width: 1100px) {
     .header {
-      width: calc(100% + 19px + 19px);
-      margin-left: -19px;
       padding-bottom: 31.6px;
     }
   }
-  
