--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -2,7 +2,7 @@
     width: 100%;
     padding: 0 0 10px;
     margin: 30px 0 0;
-    font-family: 'Inter';
+    font-family: 'Inter', 'Arial', sans-serif;
     font-weight: 400;
     font-size: 14px;
     line-height: 17px;
