--- a/blocks/popup/__title/popup__title.css
+++ b/blocks/popup/__title/popup__title.css
@@ -2,7 +2,7 @@
     width: 100%;
     padding: 0 0 17px;
     margin: 0;
-    font-family: 'Inter';
+    font-family: 'Inter','Arial', sans-serif;
     font-weight: 900;
     font-size: 24px;
     line-height: 29px;
