--- a/blocks/profile/__activity/profile__activity.css
+++ b/blocks/profile/__activity/profile__activity.css
@@ -1,5 +1,5 @@
-.personal-card__activity {
-    width: 336px;
+.profile__activity {
+    max-width: 336px;
     margin: 16px 0 0;
     padding: 0;
     width: 100%;
@@ -13,7 +13,7 @@
   }
   
   @media screen and (max-width: 1100px) {
-    .personal-card__activity {
+    .profile__activity {
       margin-top: 6px;
       margin-bottom: 33px;
       text-align: center;
@@ -21,8 +21,8 @@
   }
   
   @media screen and (max-width: 400px) {
-    .personal-card__activity {
-      width: 282px;
+    .profile__activity {
+      max-width: 282px;
       font-size: 14px;
       line-height: 17px;
     }
