--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -1,4 +1,4 @@
-.personal-card__info {
+.profile__info {
     display: flex;
     position: relative;
     flex-wrap: wrap;
@@ -8,7 +8,7 @@
 }
 
 @media screen and (max-width: 1100px) {
-    .personal-card__info {
+    .profile__info {
         justify-content: center;
     }
 }
