--- a/blocks/profile/__personal-card/profile__personal-card.css
+++ b/blocks/profile/__personal-card/profile__personal-card.css
@@ -1,4 +1,4 @@
-.personal-card {
+.profile__personal-card {
     display: flex;
     position: relative;
     align-content: center;
@@ -6,7 +6,7 @@
 }
 
 @media screen and (max-width: 1100px) {
-    .personal-card {
+    .profile__personal-card {
         flex-direction: column;
         align-items: center;
         gap: 26px;
