--- a/pages/index.css
+++ b/pages/index.css
@@ -3,19 +3,19 @@
 
 @import url(../blocks/body/body.css);
 @import url(../blocks/page/page.css);
+@import url(../blocks/content/content.css);
 
 @import url(../blocks/header/header.css);
 @import url(../blocks/header/__logo/header__logo.css);
 
 @import url(../blocks/profile/profile.css);
+@import url(../blocks/profile/__activity/profile__activity.css);
 @import url(../blocks/profile/__add-button/profile__add-button.css);
-
-@import url(../blocks/personal-card/personal-card.css);
-@import url(../blocks/personal-card/__avatar/personal-card__avatar.css);
-@import url(../blocks/personal-card/__info/personal-card__info.css);
-@import url(../blocks/personal-card/__activity/personal-card__activity.css);
-@import url(../blocks/personal-card/__edit-button/personal-card__edit-button.css);
-@import url(../blocks/personal-card/__name/personal-card__name.css);
+@import url(../blocks/profile/__avatar/profile__avatar.css);
+@import url(../blocks/profile/__edit-button/profile__edit-button.css);
+@import url(../blocks/profile/__info/profile__info.css);
+@import url(../blocks/profile/__name/profile__name.css);
+@import url(../blocks/profile/__personal-card/profile__personal-card.css);
 
 @import url(../blocks/cards/__places-list/cards__places-list.css);
 @import url(../blocks/unmarked-list/unmarked-list.css);
